# matrix-multiply-optimization

./: CMakeLists.txt
common/: check.cpp  check.h  eval.h  matrix.cpp  matrix.h
v0_basic/: CMakeLists.txt  main.cu
v1_tile/: CMakeLists.txt  main.cu
vinfA_cublas/: CMakeLists.txt  main.cu
vinfB_cutlass/: CMakeLists.txt  main.cu
